# lapack

./: .clang-format  CMakeLists.txt
LAPACK_CPP/: CMakeLists.txt
SRC/: CMakeLists.txt  Makefile  cgetrp.f  cggqrcs.f  clarfgp.f  cunbdb5.f  cunbdb6.f  dbbcsd.f  dgetrp.f  dggqrcs.f  dlarfgp.f  dorbdb1.f  dorbdb1s.f  dorbdb2.f  dorbdb3.f  dorbdb4.f  dorbdb5.f  dorbdb6.f  dorcsd2by1.f  sgetrp.f  sggqrcs.f  slarfgp.f  sorbdb1.f  sorbdb2.f  sorbdb3.f  sorbdb4.f  sorbdb5.f  sorbdb6.f  sorcsd2by1.f  zbbcsd.f  zgetrp.f  zggqrcs.f  zlarfgp.f  zunbdb5.f  zunbdb6.f
TESTING/: CMakeLists.txt
TESTING/EIG/: CMakeLists.txt  Makefile  cchkee.F  cckgsv.f  cerrgg.f  cgqrcst.f  dchkee.F  dckgsv.f  derrgg.f  dgqrcst.f  schkee.F  zchkee.F  zckgsv.f  zerrgg.f  zgqrcst.f
TESTING/cpp/: CMakeLists.txt  config.hpp.in  lapack.hpp  tools.hpp  tools_tests.cpp  xGGQRCS.hpp  xGGQRCS_tests.cpp  xUNBDB6_tests.cpp  xUNCSD2BY1_tests.cpp
